syntax = "proto3";
package scalar.protocol.v1beta1;

import "scalar/protocol/v1beta1/types.proto";

option go_package = "github.com/scalarorg/scalar-core/x/protocol/types";

message ProtocolsRequest {
  string pubkey = 1;
  string address = 2;
  string name = 3;
  Status status = 4;
}

message ProtocolsResponse {
  repeated Protocol protocols = 1;
}
