// File copied from golang tofnd with minor tweaks
syntax = "proto3";

package tofnd;

import "gogoproto/gogo.proto";

option go_package = "github.com/scalarorg/scalar-core/x/tss/tofnd";

// Key presence check types
message KeyPresenceRequest {
  string key_uid = 1;
  bytes pub_key = 2; // SEC1-encoded compressed pub key bytes to find the right
  // mnemonic. Latest is used, if empty.
}

message KeyPresenceResponse {
  enum Response {
    option (gogoproto.goproto_enum_prefix) = false;

    RESPONSE_UNSPECIFIED = 0;
    RESPONSE_PRESENT = 1;
    RESPONSE_ABSENT = 2;
    RESPONSE_FAIL = 3;
  }

  Response response = 1;
}
